<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.addEntry.AddEntryFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:context=".ui.addEntry.AddEntryFragment">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/reporting_mark_Label"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reportingMarkLabelDesc"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            <EditText
                android:id="@+id/editReportingMark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/reportingMarkEditTextHint"
                android:importantForAutofill="no"
                android:inputType="text|textCapCharacters" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:context=".ui.addEntry.AddEntryFragment">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fleet_idLabel"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fleetIDLabelDesc"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            <EditText
                android:id="@+id/editFleetID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/fleetIDEditTextHint"
                android:importantForAutofill="no"
                android:inputType="text|textCapCharacters"
                android:maxLength="6"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:context=".ui.addEntry.AddEntryFragment">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owning_companyLabel"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owningCompanyLabelDesc"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            <EditText
                android:id="@+id/editOwningCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/owningCompanyEditTextHint"
                android:importantForAutofill="no"
                android:inputType="text|textCapWords"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:context=".ui.addEntry.AddEntryFragment">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rolling_stock_typeLabel"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stockTypeLabelDesc"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            <Spinner
                android:id="@+id/stockTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:entries="@array/stockTypes" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/isEngineChkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/is_engineChkBoxLabel" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/isLoadedChkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/is_railcar_loadedChkBoxLabel" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/inConsistChkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/is_in_consistChkBoxLabel" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/isRentedChkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/is_rentedChkBoxLabel" />
            </LinearLayout>

            <Button
                android:id="@+id/addRollingStockBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_rolling_stock" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>