<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/navigation_dashboard">

	<fragment
		android:id="@+id/navigation_home"
		android:name="gq.catz.inventoryofrollingstock.ui.addEntry.AddEntryFragment"
		android:label="@string/title_addEntry"
		tools:layout="@layout/fragment_addentry" />

	<fragment
		android:id="@+id/navigation_dashboard"
		android:name="gq.catz.inventoryofrollingstock.ui.viewInventory.ViewInventoryFragment"
		android:label="@string/title_viewInventory"
		tools:layout="@layout/fragment_viewinventory" />

	<fragment
		android:id="@+id/navigation_notifications"
		android:name="gq.catz.inventoryofrollingstock.ui.Consists.ConsistsFragment"
		android:label="@string/title_quickStats"
		tools:layout="@layout/fragment_quickstats" />
</navigation>