<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listitemroot"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeWidth="1dp"
    app:strokeColor="@color/stroke_color"
    app:cardElevation="0dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    app:cardPreventCornerOverlap="true"
    android:layout_marginBottom="5dp"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <!-- Container for both card and expandable -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <!-- Always-visible card -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!--<View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />-->

            <TextView
                android:id="@+id/rollingStockInfoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/rolling_stock_identification_information"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/isEngine"
                    style="@style/Widget.MaterialComponents.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_engine"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <TextView
                    android:id="@+id/stockType"
                    style="@style/Widget.MaterialComponents.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/stock_type"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <TextView
                    android:id="@+id/isLoaded"
                    style="@style/Widget.MaterialComponents.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:text="@string/has_load"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            </LinearLayout>

            <TextView
                android:id="@+id/owningComany"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owning_company"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            <TextView
                android:id="@+id/isRented"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_rolling_stock_rented"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:id="@+id/cardExpansion"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/edit"
                style="?attr/borderlessButtonStyle"
                android:id="@+id/editCardBtn" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                style="?attr/borderlessButtonStyle"
                android:id="@+id/deleteCardBtn" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>